kurzbeschrieb spacing fixed

--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@ nav ul {
     margin-top: 1rem;
 }
 
+.overview h2 {
+    margin-bottom: 1rem;
+}
+
 .maincontent {
     grid-area: maincontent;
 }
@@ -318,6 +322,11 @@ footer h3 {
             "maincontent";
         gap: 0;
     }
+
+    .overview h2 {
+        margin-bottom: 2rem;
+    }
+
     .content-section {
         grid-template-columns: 1fr;
         grid-template-rows: 3.5rem 1fr;
